Create PublicKeyCredentialCreationOptions on server side use them on client side (but there is a problem with binary data serialization ot the callenge and the user id)