@@ -12,11 +12,20 @@ repositories {
 
 dependencies {
     implementation("io.javalin","javalin","3.8.0")
-    implementation("com.auth0","java-jwt","3.10.3")
     implementation("org.slf4j","slf4j-simple","1.7.28")
-    // Data Serialization
-    implementation("com.fasterxml.jackson.core","jackson-core","2.11.0")
-    implementation("com.fasterxml.jackson.core","jackson-databind","2.11.0")
+
+    // Security - JWT
+    implementation("com.auth0","java-jwt","3.10.3")
+    // Security - WebAuthN Standard for FIDO2 Support
+    implementation("com.yubico","webauthn-server-core","1.6.4")
+    implementation("com.yubico","yubico-util","1.6.4")
+
+    // Data serialization
+    implementation("com.fasterxml.jackson.core","jackson-core","2.11.1")
+    implementation("com.fasterxml.jackson.core","jackson-databind","2.11.1")
+    // use for serialization of JAVA 8 Optionals
+    implementation("com.fasterxml.jackson.datatype","jackson-datatype-jdk8","2.11.1")
+
     // Webjars for web frontend
     implementation("org.webjars.npm","vue","2.6.11")
 
@@ -37,7 +46,11 @@ tasks.compileTestJava{
     options.compilerArgs.add("--enable-preview")
 }
 tasks.test{
+    // this doesn't work correctly
     jvmArgs?.add("--enable-preview")
+    // only this way o setting the properties works currently
+    setJvmArgs(listOf("--enable-preview"))
+    //println("jvmArgs = "+jvmArgs)
 }
 
 application {
